# diabetes_classifier

./: .gitignore  README.md  dvc.yaml  environment_variable_config.env  params.yaml  pyproject.toml  results.csv
.dvc/: config
cicd/: ci.yml  create_images_and_push.py  create_training_environment.py  deploy_staging_batch_endpoint.py  submit_training_job.py  update_data.py  update_staging_data.py
cicd/deployment/: utils.py
cicd/deployment/scoring/: batch_driver.py
cicd/deployment/test/: test_utils.py
data/processed/: .gitignore
data/raw/: diabetes.csv.dvc
data/staging/batch/: data.csv.dvc
diabetes_classifier/: plotting.py
diabetes_classifier/data/: create_train_test_data.py  process_data.py  schema.py
diabetes_classifier/diabetes_classifier_models/: pyproject.toml
diabetes_classifier/diabetes_classifier_models/diabetes_classifier_models/xgboost/: train.py
diabetes_classifier/diabetes_classifier_training/: data_prep.py  metrics.py  train.py
diabetes_classifier/diabetes_classifier_training/env_training/: Dockerfile  requirements.txt
diabetes_classifier/models/xgboost/: train.py
docker_build_context/: Dockerfile
docker_model_build_context/: Dockerfile
env_batch_model/: mlflow_env.yaml
notebooks/: 0-data-exploration.ipynb  0-data.ipynb
