[tool.poetry]
name = "diabetes-classifier-models"
version = "0.0.1"
description = ""
authors = ["John Cummings <jcummingsutk@gmail.com>"]
readme = "README.md"
packages = [{ include = "diabetes_classifier_models" }]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.3"
numpy = "^1.26.2"
scikit-learn = "^1.3.2"
xgboost = "^2.0.2"
mlflow = "^2.9.2"
imbalanced-learn = "^0.11.0"
seaborn = "^0.13.0"
azureml-mlflow = "^1.54.0.post1"
hyperopt = "^0.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
